--- a/dependent-literals/dependent-literals.cabal
+++ b/dependent-literals/dependent-literals.cabal
@@ -38,7 +38,7 @@ library
       base >=4.12 && <4.16
     , fin-int >=0.1 && <0.3
     , numeric-kinds ==0.1.*
-    , sint ==0.1.*
+    , sint >=0.1 && <0.3
     , snumber >=0.1 && <0.3
     , tagged ==0.8.*
     , wrapped ==0.1.*
