--- a/dependent-literals-plugin/dependent-literals-plugin.cabal
+++ b/dependent-literals-plugin/dependent-literals-plugin.cabal
@@ -80,10 +80,10 @@ test-suite FinErrors-test
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
-    , dependent-literals >=0.1.1 && <0.2
+    , dependent-literals >=0.1.1 && <0.3
     , dependent-literals-plugin
     , fin-int >=0.1 && <0.3
-    , numeric-kinds ==0.1.*
+    , numeric-kinds >=0.1 && <0.3
     , short-vec ==0.1.*
     , sint >=0.1 && <0.3
     , snumber >=0.1 && <0.3
@@ -108,10 +108,10 @@ test-suite IntErrors-test
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
-    , dependent-literals >=0.1.1 && <0.2
+    , dependent-literals >=0.1.1 && <0.3
     , dependent-literals-plugin
     , fin-int >=0.1 && <0.3
-    , numeric-kinds ==0.1.*
+    , numeric-kinds >=0.1 && <0.3
     , short-vec ==0.1.*
     , sint >=0.1 && <0.3
     , snumber >=0.1 && <0.3
@@ -152,10 +152,10 @@ test-suite Plugin-test
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
-    , dependent-literals >=0.1.1 && <0.2
+    , dependent-literals >=0.1.1 && <0.3
     , dependent-literals-plugin
     , fin-int >=0.1 && <0.3
-    , numeric-kinds ==0.1.*
+    , numeric-kinds >=0.1 && <0.3
     , short-vec ==0.1.*
     , sint >=0.1 && <0.3
     , snumber >=0.1 && <0.3
@@ -178,10 +178,10 @@ test-suite PolyErrors-test
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
-    , dependent-literals >=0.1.1 && <0.2
+    , dependent-literals >=0.1.1 && <0.3
     , dependent-literals-plugin
     , fin-int >=0.1 && <0.3
-    , numeric-kinds ==0.1.*
+    , numeric-kinds >=0.1 && <0.3
     , short-vec ==0.1.*
     , sint >=0.1 && <0.3
     , snumber >=0.1 && <0.3
@@ -206,10 +206,10 @@ test-suite SIntErrors-test
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
-    , dependent-literals >=0.1.1 && <0.2
+    , dependent-literals >=0.1.1 && <0.3
     , dependent-literals-plugin
     , fin-int >=0.1 && <0.3
-    , numeric-kinds ==0.1.*
+    , numeric-kinds >=0.1 && <0.3
     , short-vec ==0.1.*
     , sint >=0.1 && <0.3
     , snumber >=0.1 && <0.3
@@ -234,10 +234,10 @@ test-suite SNumberErrors-test
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
-    , dependent-literals >=0.1.1 && <0.2
+    , dependent-literals >=0.1.1 && <0.3
     , dependent-literals-plugin
     , fin-int >=0.1 && <0.3
-    , numeric-kinds ==0.1.*
+    , numeric-kinds >=0.1 && <0.3
     , short-vec ==0.1.*
     , sint >=0.1 && <0.3
     , snumber >=0.1 && <0.3
@@ -262,10 +262,10 @@ test-suite WordErrors-test
   ghc-options: -fplugin=DependentLiterals.Plugin
   build-depends:
       base >=4.12 && <4.16
-    , dependent-literals >=0.1.1 && <0.2
+    , dependent-literals >=0.1.1 && <0.3
     , dependent-literals-plugin
     , fin-int >=0.1 && <0.3
-    , numeric-kinds ==0.1.*
+    , numeric-kinds >=0.1 && <0.3
     , short-vec ==0.1.*
     , sint >=0.1 && <0.3
     , snumber >=0.1 && <0.3
