--- a/snumber/snumber.cabal
+++ b/snumber/snumber.cabal
@@ -41,5 +41,5 @@ library
       src
   build-depends:
       base >=4.12 && <4.17
-    , numeric-kinds ==0.1.*
+    , numeric-kinds >=0.1 && <0.3
   default-language: Haskell2010
